# roach

./: .gitignore  Cargo.toml  LICENSE  README.md  UHP.md
hive/: Cargo.toml  README.md
hive/benches/: game_state_benchmark.rs  hex_benchmark.rs  sgf_benchmark.rs
hive/src/: ai.rs  engine.rs  error.rs  game_state.rs  hex.rs  parser.rs  piece.rs  sgf_parser.rs  test_utils.rs
hive/test_data/: HV-Asevenson-Dumbot-2020-03-31-2031.sgf  HV-BartV-Dumbot1-2020-03-29-1641.sgf  HV-Dumbot-makobwoy-2020-03-28-2327.sgf  HV-Dumbot-makobwoy-2020-03-29-1218.sgf  HV-Dumbot-makobwoy-2020-03-29-1332.sgf  HV-Dumbot-makobwoy-2020-03-31-1231.sgf  HV-Dumbot0-makobwoy-2020-03-28-1145.sgf  HV-Dumbot0-makobwoy-2020-03-28-2324.sgf  HV-Dumbot0-makobwoy-2020-03-28-2329.sgf  HV-Dumbot0-makobwoy-2020-03-29-1535.sgf  HV-Frasco92-gandac-2020-03-31-0857.sgf  HV-Fresh-WeakBot1-2020-03-30-0355.sgf  HV-IAmDeviant-ringersoll-2020-07-31-1442.sgf  HV-IkaTaii-Tenaccio-2020-03-29-0010.sgf  HV-JAAcosta-Dumbot-2020-03-30-0420.sgf  HV-JensEmilJ-ddyer-2020-08-01-2229.sgf  HV-Mulsiphix-Glacial-2020-07-31-0634.sgf  HV-Rufeo612-WeakBot-2020-08-01-0227.sgf  HV-Rufeo612-WeakBot-2020-08-01-2044.sgf  HV-Rufeo612-WeakBot1-2020-03-28-2302.sgf  HV-Rufeo612-WeakBot1-2020-03-31-0024.sgf  HV-SmartBot0-ChuckQ-2020-03-29-2246.sgf  HV-SmartBot0-dbingeman-2020-03-30-1920.sgf  HV-TheYeti-WeakBot1-2020-03-30-0515.sgf  HV-TheYeti-WeakBot1-2020-04-01-0142.sgf  HV-WeakBot-bfractal-2020-08-03-0634.sgf  HV-WeakBot-bfractal-2020-08-03-0639.sgf  HV-WeakBot-reneroru-2020-07-31-0002.sgf  HV-bengates-Dumbot-2020-03-30-0027.sgf  HV-bfractal-WeakBot-2020-08-04-0111.sgf  HV-ccampb-scottmahr-2020-03-29-0246.sgf  HV-dbingeman-SmartBot1-2020-03-30-1838.sgf  HV-dsheikhp-Dumbot-2020-03-31-0450.sgf  HV-duckwood98-WeakBot1-2020-03-31-2117.sgf  HV-guest-Dumbot-2020-07-30-2005.sgf  HV-guest-Dumbot-2020-07-31-1550.sgf  HV-guest-Dumbot-2020-08-01-0725.sgf  HV-guest-Dumbot-2020-08-01-1315.sgf  HV-guest-Dumbot-2020-08-04-0224.sgf  HV-guest-WeakBot-2020-07-30-0449.sgf  (+38 more)
roach/: .env  Cargo.toml
roach-client/: Cargo.toml  Dockerfile  entrypoint.sh
roach-client/src/: engine.rs  main.rs  matchmaking.rs  process.rs
roach-server/: Cargo.toml  Dockerfile  clear_diesel.sh  entrypoint.sh
roach-server/migrations/2020-11-28-201717_create_players/: up.sql
roach-server/migrations/2020-11-29-201534_create_matches/: up.sql
roach-server/migrations/2020-12-03-014022_create_match_outcome/: down.sql  up.sql
roach-server/src/: client.rs  db.rs  err_handler.rs  filters.rs  handlers.rs  hive_match.rs  main.rs  matchmaker.rs  model.rs  player.rs  schema.rs
roach-server/templates/: footer_partial.hbs  game.hbs  game_info_partial.hbs  games.hbs  games_partial.hbs  header_partial.hbs  index.hbs  player.hbs  player_stats_partial.hbs  players.hbs  players_partial.hbs
roach/migrations/2020-11-28-201717_create_players/: down.sql  up.sql
roach/src/: client.rs  db.rs  filters.rs  handlers.rs  hive_match.rs  main.rs  matchmaker.rs  player.rs  schema.rs
(+100 files in other folders)
