[package]
name = "roach-client"
version = "0.1.0"
authors = ["Will Greenberg <willg@eff.org>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
"hive" = { path = "../hive" }
async-trait = "0.1.42"
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.12.0"
reqwest = {version = "0.10.9", features = ["json"] }
futures = { version = "0.3", default-features = false }
clap = "2.33.3"
http = "*"
tungstenite = "0.11.1"
