[package]
name = "roach-server"
version = "0.1.0"
authors = ["Will Greenberg <willg@eff.org>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
"hive" = { path = "../hive" }
async-trait = "0.1.42"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
sha2 = "0.9.2"
rand = "0.7.3"
tokio-diesel = "0.3.0"
futures = { version = "0.3", default-features = false }
