[package]
name = "roach"
version = "0.1.0"
authors = ["Will Greenberg <willg@eff.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
"hive" = { path = "../hive" }
async-trait = "0.1.42"
